welcome.lessons.welcome.conditions.Conditions.scala.code
if (estFaceMur(7)=true ){
  recule();
} else {
  avance();
}